--- a/crop.ipynb
+++ b/crop.ipynb
@@ -1,119 +1,163 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## crop and fertilizer recommendation system using ml\n",
-    "\n"
+    "#importing necessary libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2200 entries, 0 to 2199\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   N            2200 non-null   int64  \n",
-      " 1   P            2200 non-null   int64  \n",
-      " 2   K            2200 non-null   int64  \n",
-      " 3   temperature  2200 non-null   float64\n",
-      " 4   humidity     2200 non-null   float64\n",
-      " 5   ph           2200 non-null   float64\n",
-      " 6   rainfall     2200 non-null   float64\n",
-      " 7   label        2200 non-null   object \n",
-      "dtypes: float64(4), int64(3), object(1)\n",
-      "memory usage: 137.6+ KB\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>N</th>\n",
+       "      <th>P</th>\n",
+       "      <th>K</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>ph</th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>90</td>\n",
+       "      <td>42</td>\n",
+       "      <td>43</td>\n",
+       "      <td>20.879744</td>\n",
+       "      <td>82.002744</td>\n",
+       "      <td>6.502985</td>\n",
+       "      <td>202.935536</td>\n",
+       "      <td>rice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>85</td>\n",
+       "      <td>58</td>\n",
+       "      <td>41</td>\n",
+       "      <td>21.770462</td>\n",
+       "      <td>80.319644</td>\n",
+       "      <td>7.038096</td>\n",
+       "      <td>226.655537</td>\n",
+       "      <td>rice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>60</td>\n",
+       "      <td>55</td>\n",
+       "      <td>44</td>\n",
+       "      <td>23.004459</td>\n",
+       "      <td>82.320763</td>\n",
+       "      <td>7.840207</td>\n",
+       "      <td>263.964248</td>\n",
+       "      <td>rice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>74</td>\n",
+       "      <td>35</td>\n",
+       "      <td>40</td>\n",
+       "      <td>26.491096</td>\n",
+       "      <td>80.158363</td>\n",
+       "      <td>6.980401</td>\n",
+       "      <td>242.864034</td>\n",
+       "      <td>rice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>78</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>20.130175</td>\n",
+       "      <td>81.604873</td>\n",
+       "      <td>7.628473</td>\n",
+       "      <td>262.717340</td>\n",
+       "      <td>rice</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "label\n",
-       "rice           100\n",
-       "maize          100\n",
-       "jute           100\n",
-       "cotton         100\n",
-       "coconut        100\n",
-       "papaya         100\n",
-       "orange         100\n",
-       "apple          100\n",
-       "muskmelon      100\n",
-       "watermelon     100\n",
-       "grapes         100\n",
-       "mango          100\n",
-       "banana         100\n",
-       "pomegranate    100\n",
-       "lentil         100\n",
-       "blackgram      100\n",
-       "mungbean       100\n",
-       "mothbeans      100\n",
-       "pigeonpeas     100\n",
-       "kidneybeans    100\n",
-       "chickpea       100\n",
-       "coffee         100\n",
-       "Name: count, dtype: int64"
+       "    N   P   K  temperature   humidity        ph    rainfall label\n",
+       "0  90  42  43    20.879744  82.002744  6.502985  202.935536  rice\n",
+       "1  85  58  41    21.770462  80.319644  7.038096  226.655537  rice\n",
+       "2  60  55  44    23.004459  82.320763  7.840207  263.964248  rice\n",
+       "3  74  35  40    26.491096  80.158363  6.980401  242.864034  rice\n",
+       "4  78  42  42    20.130175  81.604873  7.628473  262.717340  rice"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# importing necessary libraries\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "# loading csv files\n",
-    "crop = pd.read_csv(r\"C:\\Users\\ACER\\Desktop\\crop & fertilizer\\dataset\\Crop_recommendation.csv\")\n",
+    "#Loading csv files\n",
+    "crop = pd.read_csv(r\"C:\\Users\\DELL\\Desktop\\crop and fertilizer\\Crop_recommendation.csv\")\n",
     "\n",
-    "# returns first 5 rows of dataset\n",
-    "crop.head()\n",
-    "\n",
-    "# returns last 5 rows of dataset\n",
-    "crop.tail()\n",
-    "\n",
-    "# returns rows and columns\n",
-    "crop.shape\n",
-    "\n",
-    "# returns info of dataset\n",
-    "crop.info()\n",
-    "\n",
-    "# checking null values\n",
-    "crop.isnull().sum()\n",
-    "\n",
-    "# checking duplicate values\n",
-    "crop.duplicated().sum()\n",
-    "\n",
-    "# checking statistics of the data\n",
-    "crop.describe()\n",
-    "\n",
-    "# it shows all the columns\n",
-    "crop.columns\n",
-    "\n",
-    "# checking feature of specific columns\n",
-    "crop['label'].value_counts()\n",
-    "\n",
-    "\n",
-    "\n"
+    "#returns first 5 rows of dataset\n",
+    "crop.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m crop\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDELL\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDesktop\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mcrop and fertilizer\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mCrop_recommendation.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "crop=pd.read_csv(r\"C:\\Users\\DELL\\Desktop\\crop and fertilizer\\Crop_recommendation.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -139,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
